src/components/shared/footer/Footer.scss
.footer {
  position: relative;
  bottom: 0;
  left: 0;
  overflow: hidden;
  margin: auto;
  font-family: var(--heading-font);
  height: 600px;
  display: flex;
  flex-direction: column;
  justify-content: center;

  @media screen and (max-width: 850px) {
    height: auto;
    padding-bottom: 3rem;
  }

  .footer_flexdiv {
    display: flex;
    justify-content: space-between;
    padding: 0 9rem;
    margin-top: auto;
    align-items: end;

    .h4b_logo {
      width: 20rem;
      margin-left: -5px;

      @media screen and (max-width: 850px) {
        width: 18rem;
      }
    }

    .h4b_logo_2 {
      display: none;
    }

    @media screen and (max-width: 850px) {
      flex-direction: column;
      gap: 1.5rem;
      padding: 0rem 1.5rem;
      justify-content: center;
      align-items: center;
    }

    .footer_content {
      @media screen and (max-width: 850px) {
        flex-direction: column;
        gap: 1rem;
        justify-content: center;
        align-items: center;
      }

      .footer_policy {
        display: flex;
        align-items: center;
        gap: 1.1rem;

        a {
          font-size: 15px;
          font-weight: 500;
          color: var(--alt-color);
          transition: all 0.2s ease-in-out;
          font-family: var(--heading-font);
          text-decoration: none;
          z-index: 2;

          &:hover {
            cursor: pointer;
            color: var(--h4bred);
          }
        }
      }

      .footer_email {
        margin-top: 1.2rem;
        display: flex;
        flex-direction: column;
        gap: 1.2rem;

        @media screen and (max-width: 850px) {
          align-items: center;
        }

        p {
          font-size: 15px;
          font-weight: 500;
          color: var(--alt-color);
          transition: all 0.2s ease-in-out;
          font-family: var(--heading-font);

          opacity: 0.6;
        }

        a {
          color: var(--h4bred);
          text-decoration: none;
          font-weight: 600;
          font-size: 15px;
          transition: all 0.2s ease-in-out;

          &:hover {
            color: var(--h4bred);
          }
        }
      }
    }
  }

  .previous_season {
    @media screen and (min-width: 851px) {
      display: none;
    }

    .footer_content {
      .footer_policy {
        a {
          background-color: #131313;
          width: 40px;
          height: 40px;
          display: flex;
          justify-content: center;
          align-items: center;
          border-radius: 8px;
          transition: all 0.2s ease-in-out;
          border: 1px solid var(--h4bred);
        }
      }
    }
  }

  .footer_flexdiv:nth-of-type(2) {
    margin-top: 4rem;

    @media screen and (max-width: 850px) {
      margin-top: 0rem;
      margin-bottom: 1.5rem;
    }
  }

  .footer_flexdiv_special {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: auto;
    position: absolute;
    bottom: 1rem;
    cursor: pointer;
    transition: all 2s ease-in-out;
    left: 46%;
    transform: translateX(-50%);
    z-index: 2;

    @media screen and (max-width: 850px) {
      display: none;
    }

    p {
      padding-top: 20px;
      font-size: 1rem;
      font-weight: 600;
      color: var(--h4bred);
      transition: all 1.3s ease-in-out;
      font-family: var(--heading-font);
      text-decoration: none;
    }

    img {
      width: 30%;
      opacity: 0;
      transition: all 2s ease-in-out;
    }

    .season_linkdiv {
      position: absolute;
      bottom: 15px;
      left: 63%;
      width: 100%;
      transform: translateX(-50%);

      display: flex;
      gap: 1.2rem;
      justify-content: center;
      align-items: center;
      transition: opacity 1.5s ease-in-out;
      opacity: 0;

      a {
        color: var(--h4bred);
        text-decoration: none;
        font-weight: 600;
        font-size: 17px;
        transition: all 0.2s ease-in-out !important;

        &:hover {
          color: white;
        }
      }
    }

    &:hover {
      img {
        animation: taxiAnimation 2s ease-in-out forwards;
      }

      p {
        transition: all 1.3s ease-in-out;
        opacity: 0;
      }

      .season_linkdiv {
        opacity: 1;

        a {
          transition: all 1.5s ease-in-out;
          z-index: 99;
        }
      }
    }

    @keyframes taxiAnimation {
      0% {
        opacity: 0;
        transform: translateX(0);
      }

      33.33% {
        opacity: 1;
        transform: translateX(0);
      }

      66.66% {
        opacity: 1;
        transform: translateX(calc(300% + 0.9rem));
      }

      100% {
        opacity: 0;
        transform: translateX(calc(300% + 0.9rem));
      }
    }
  }

  .footer_socials {
    display: flex;
    gap: 1.4rem;
    justify-content: center;
    align-items: center;
    z-index: 3;

    @media screen and (max-width: 850px) {
      gap: 1rem;
      margin-top: 1.5rem;
    }

    img {
      width: 1.8rem;
      height: 1.8rem;
      transition: all 0.2s ease-in-out;

      &:hover {
        opacity: 0.8;
      }
    }
  }

  .footer_gradient {
    position: absolute;
    bottom: 0;
    right: -2px;
    width: 53%;
    height: 119%;
    z-index: 1;

    @media screen and (max-width: 850px) {
      width: 300%;
      bottom: -15%;
    }
  }

  .footer_tram {
    position: absolute;
    top: 150px;
    right: 0;
    height: 334px;
    width: 720px;
    z-index: 2;

    @media screen and (max-width: 1120px) {
      top: 200px;
      right: 0;
      height: fit-content;
      width: 720px;
    }

    @media screen and (max-width: 1080px) {
      top: 200px;
      right: 0;
      width: 500px;
    }

    @media screen and (max-width: 850px) {
      display: none;
    }
  }
}

